--- a/game-ui/src/app/app.component.html
+++ b/game-ui/src/app/app.component.html
@@ -1,16 +1,3 @@
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * The content below * * * * * * * * * * * -->
-<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
-<!-- * * * * * * * * * * and can be replaced. * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * Delete the template below * * * * * * * * * * -->
-<!-- * * * * * * * to get started with your project! * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-
-<style>
-</style>
-
-<!-- Toolbar -->
 
 <div>
   
@@ -29,46 +16,6 @@
   </mat-toolbar>
 <div>
 
-<div class="content" role="main">
-
-  <!-- Highlight Card -->
-  <div class="card highlight-card " style="text-align: center;">
-
-    <span>{{ title }} app is running!</span>
-    
-  </div>
-
-  <h2>Type your word here!</h2>
-
-  <form class="example-form">
-    <mat-form-field class="example-full-width" appearance="fill">
-      <mat-label>Current Word</mat-label>
-      <input type="text" matInput [formControl]="emailFormControl" [errorStateMatcher]="matcher"
-             placeholder="Type any letters that are displayed on the box">
-      <mat-error *ngIf="emailFormControl.hasError('required')">
-        Please enter a valid word
-      </mat-error>
-      <mat-error *ngIf="emailFormControl.hasError('pattern')">
-        Type a word with <strong>5 letters</strong>
-      </mat-error>
-    </mat-form-field>
-  </form>
-
-
-  <div><h1>Player 1</h1></div>
-  
-  <canvas id="letteredbox" class="letterbox">
-    
-  </canvas>
-  <canvas id="tutorial" class="dotbox">
-  </canvas>
-
-  <!-- Footer -->
-  <footer>
-      <!--footer&nbsp;-->
-  </footer>
-
-</div>
-
-
+<app-game></app-game>
+<!-- <app-home></app-home> -->
 <router-outlet></router-outlet>
