show games on home component; added routing, need to fix creating game in backend and send data from home to game component

--- a/game-ui/src/app/app.component.html
+++ b/game-ui/src/app/app.component.html
@@ -15,7 +15,8 @@
     </button>
   </mat-toolbar>
 <div>
+<!-- 
+<app-game></app-game> -->
 
-<app-game></app-game>
-<!-- <app-home></app-home> -->
 <router-outlet></router-outlet>
+<app-home></app-home>
