new frontend components

--- a/game-ui/src/app/app.component.html
+++ b/game-ui/src/app/app.component.html
@@ -2,21 +2,23 @@
 <div>
   
   <mat-toolbar color="primary">
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+    <!-- <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
       <mat-icon>menu</mat-icon>
-    </button>
+    </button> -->
     <span>LETTER BOXED GAME</span>
     <span class="example-spacer"></span>
-    <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+    <div>
+      <button  mat-raised-button class="example-icon" (click)="logout()">Logout</button>
+    </div>
+    <!-- <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
       <mat-icon>favorite</mat-icon>
     </button>
     <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
       <mat-icon>share</mat-icon>
-    </button>
+    </button> -->
   </mat-toolbar>
 <div>
-<!-- 
-<app-game></app-game> -->
 
 <router-outlet></router-outlet>
-<app-home></app-home>
+<!-- <app-home></app-home> -->
+<!-- <app-login></app-login> -->
