--- a/game-ui/src/app/home/home.component.html
+++ b/game-ui/src/app/home/home.component.html
@@ -1,20 +1,22 @@
 <div class="content" role="main">
 
     <h2>Choose a game to play with a friend!</h2>
-
     <div class="card2">
-        <h2>Game ID Letters Difficulty</h2>
+        <button mat-raised-button color="primary" (click)="beginGame()">Start New Game</button>
     </div>
-    <!-- Highlight Card -->
-    <div class="card highlight-card " style="text-align: center;" *ngFor="let game of typesOfGames" [value]="game">
+    <div class="card2">
+        <form class="example-form">
+            <mat-form-field class="example-full-width" appearance="fill">
+                <mat-label>Game Id</mat-label>
+                <input type="text" matInput [formControl]="gameidFormControl" placeholder="Enter a game id to join">
+            </mat-form-field>
+              <mat-error *ngIf="gameidFormControl.hasError('pattern')">
+                Type game id must be all numbers
+              </mat-error>
+        </form>
+        <div class="joinbtn">
+            <button mat-raised-button color="primary" (click)="joinGame()">Join</button>
+        </div>
 
-        <h3 class="listmargin">{{game.id}} {{game.letters}} {{game.winScore>3?"difficult": "easy"}}</h3> 
-        <div *ngIf="game.p1Id=='none'">
-            <button mat-raised-button color="basic" (click)="beginGame(game.id)">Start</button>
-        </div>
-        <div *ngIf="game.p1Id!='none'">
-            <button mat-raised-button color="basic" (click)="joinGame(game.id)">Join</button>
-        </div>
-        
     </div>
 </div>
