--- a/game-ui/src/app/home/home.component.scss
+++ b/game-ui/src/app/home/home.component.scss
@@ -98,10 +98,8 @@
 
   .card2 {
     border-radius: 4px;
-    border: 1px solid #eee;
-    background-color: #fafafa;
     height: 40px;
-    width: 300px;
+    width: 400px;
     margin: 0 8px 16px;
     padding: 16px;
     display: flex;
@@ -320,6 +318,6 @@
     flex: 1 1 auto;
   }
 
-  .listmargin {
+  .joinbtn {
     margin: 10px;
   }
