--- a/game-ui/src/app/login/login.component.html
+++ b/game-ui/src/app/login/login.component.html
@@ -1,22 +1,29 @@
 <div class="content" role="main" *ngIf="!loggedIn">
 
 
-    <p>Login</p>
+    <h1>Login</h1>
 
     <form class="example-form">
         <mat-form-field class="example-full-width" appearance="fill">
             <mat-label>Username</mat-label>
-            <input type="text" matInput [formControl]="usernameFormControl" placeholder="Enter username">
+            <input type="text" matInput [formControl]="usernameFormControl" [errorStateMatcher]="matcher"
+                placeholder="Enter username">
+            <mat-error *ngIf="usernameFormControl.hasError('required')">
+                username cannot be empty
+            </mat-error>
         </mat-form-field>
         <mat-form-field class="example-full-width" appearance="fill">
             <mat-label>Password</mat-label>
-            <input type="text" matInput [formControl]="passwordFormControl" placeholder="Enter password">
+            <input type="password" matInput [formControl]="passwordFormControl" placeholder="Enter password">
+            <mat-error *ngIf="passwordFormControl.hasError('required')">
+                password cannot be empty
+            </mat-error>
         </mat-form-field>
     </form>
 
     <div>
-        <button mat-raised-button (click)="authPlayer()">Submit</button>
-        <button mat-raised-button (click)="signUp()">Sign up</button>
+        <button mat-raised-button class="btnmargin" color="primary" (click)="authPlayer()">Submit</button>
+        <button mat-raised-button class="btnmargin" (click)="signUp()">Sign up</button>
     </div>
 
 </div>
