--- a/game-ui/src/app/game/game.component.scss
+++ b/game-ui/src/app/game/game.component.scss
@@ -125,6 +125,10 @@
     margin: 10px;
   }
 
+  .skipbtnmargin {
+    margin: 0.5px;
+  }
+
   .card-container .card:not(:last-child) {
     margin-right: 0;
   }
