removed some unneeded stuff from the backend

--- a/game-ui/src/app/pastgames/pastgames.component.html
+++ b/game-ui/src/app/pastgames/pastgames.component.html
@@ -38,7 +38,7 @@
 
         <!-- Symbol Column -->
         <ng-container matColumnDef="winscore">
-            <th mat-header-cell *matHeaderCellDef> Win Score </th>
+            <th mat-header-cell *matHeaderCellDef> Score needed to win </th>
             <td mat-cell *matCellDef="let element"> {{element.winScore}} </td>
         </ng-container>
 
