--- a/game-ui/src/app/playerinfo/playerinfo.component.html
+++ b/game-ui/src/app/playerinfo/playerinfo.component.html
@@ -12,11 +12,11 @@
             <td mat-cell *matCellDef="let element"> {{element.userName}} </td>
         </ng-container>
 
-        <!-- Name Column -->
+        <!-- Name Column
         <ng-container matColumnDef="email">
             <th mat-header-cell *matHeaderCellDef> Email </th>
             <td mat-cell *matCellDef="let element"> {{element.email}} </td>
-        </ng-container>
+        </ng-container> -->
 
         <!-- Weight Column -->
         <ng-container matColumnDef="Wins">
