--- a/game-ui/src/app/playerinfo/playerinfo.component.html
+++ b/game-ui/src/app/playerinfo/playerinfo.component.html
@@ -26,7 +26,7 @@
 
         <!-- Symbol Column -->
         <ng-container matColumnDef="Loses">
-            <th mat-header-cell *matHeaderCellDef> Loses </th>
+            <th mat-header-cell *matHeaderCellDef> Losses </th>
             <td mat-cell *matCellDef="let element"> {{element.gamesLost}} </td>
         </ng-container>
 
